# gherkin-taster

./: .env.example  .gitignore  Dockerfile  LINEAR_OAUTH_SETUP.md  README.md  SCAFFOLD_SUMMARY.md  docker-compose.yml  pyproject.toml
app/templates/auth/: login.html
app/templates/base/: layout.html
app/templates/features/: editor.html  list.html  new.html  preview.html
app/templates/navigation/: issues.html  projects.html
app/templates/partials/: delegation_modal.html  syntax_feedback.html
backend/: __init__.py  app.py  config.py
backend/adapters/: __init__.py  github.py  linear.py
backend/facades/: __init__.py  git_provider.py  issue_tracker.py
backend/gherkin/: __init__.py  parsing.py  validation.py
backend/middleware/: auth_middleware.py
backend/routes/: approval.py  auth.py  features.py  navigation.py
backend/services/: gemini_service.py  linear_file_service.py
backend/workflows/: __init__.py  approval_workflow.py  delegation_workflow.py
docs/: CONTRIBUTING.md  DEPLOYMENT.md
tests/: conftest.py
tests/integration/: test_approval_workflow.py  test_delegation_workflow.py
tests/unit/: test_parsing.py  test_validation.py
